default-frontend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: index
        namespace: beta
        labels:
                app: solrr.net
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: solrr.net
        template:
                metadata:
                        labels:
                                app: solrr.net
                spec:
                        containers:
                        - name: frontend
                          image: turok/default-frontend:326d175-dirty-e7a1c24
                          ports:
                          - containerPort: 80
