default-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
        name: default-frontend
spec:
        selector:
                app: solrr.net
        ports:
        - protocol: TCP
          port: 80
          targetPort: 80
